fix region overflow

--- a/src/app/components/search/search.component.sass
+++ b/src/app/components/search/search.component.sass
@@ -3,6 +3,7 @@
   background-color: white
   border-radius: 5px
   width: 400px
+  box-shadow: 1px 1px 2px #d4c5c5
 .search-input
   margin-top: -10px
   height: 100%
