--- a/src/app/components/side-bar/side-bar.component.sass
+++ b/src/app/components/side-bar/side-bar.component.sass
@@ -3,7 +3,7 @@
   position: absolute
   height: auto
   left: 55px
-  top: 10px
+  top: 0px
   z-index: 10
   @media screen and (max-width: 460px)
     width: 80%
